# site_sunlight

./: eslint.config.js  index.html  package-lock.json  package.json
BACK/: db.json  pyproject.toml
BACK/agents/: models.py  serializers.py  tests.py
BACK/basket/: serliazers.py  tests.py  views.py
BACK/communications/: admin.py  serliazers.py  tests.py
BACK/communications/migrations/: 0001_initial.py  0002_progresscentre.py
BACK/config/: urls.py
BACK/kindergarten/: admin.py  models.py  tests.py  urls.py  views.py
BACK/kindergarten/migrations/: 0001_initial.py
BACK/news/: models.py  tests.py
BACK/news/migrations/: 0001_initial.py
BACK/payment/: admin.py  models.py  serializers.py  views.py
BACK/payment/migrations/: 0001_initial.py
BACK/reports/: admin.py  serializers.py  tests.py  urls.py  views.py
BACK/reports/migrations/: 0003_alter_bankrequisites_address_and_more.py
BACK/school_page/: apps.py  tests.py  urls.py  views.py
BACK/school_page/migrations/: 0001_initial.py
BACK/srv/: admin.py  apps.py  tests.py  views.py
BACK/sun_projects/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
BACK/sun_projects/migrations/: 0001_initial.py
BACK/territory_of_success/: admin.py  serializers.py  urls.py  views.py
BACK/users/: managers.py
BACK/users/management/commands/: create_clients.py
BACK/workshop/: admin.py  models.py  serializers.py  urls.py
BACK/workshop/migrations/: 0001_initial.py
backend/: .env.example  Dockerfile  README.md  docker-compose-local.yaml  nginx
backend/agents/: admin.py  urls.py  (+1 more)
frontend/: db.json  package.json
public/: robots.txt
(+259 files in other folders)
